removed most of the components to separate them from the mockup
- button, push
- selector
- table
- modal
- field
- default css

--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,6 +1,6 @@
   <div class="app cf item-progress--visible">
 
-      {% include components/toolbox-overlay.html %}
+      <div class="toolbox-overlay"></div>
 
       <div class="app-navigator">
         {% include blocks/app-nav/app-nav.html %}
