--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   </head>
 
   <body class="page-{{ page.title }}">
-    {% include components/toolbox-overlay.html %}
+    <div class="toolbox-overlay"></div>
 
     {{ content }}
 
