--- a/_layouts/future.html
+++ b/_layouts/future.html
@@ -5,7 +5,7 @@
   </head>
 
   <body class="theme-dark">
-    {% include components/toolbox-overlay.html %}
+    <div class="toolbox-overlay"></div>
     {{ content }}
 
     {% include foot.html %}
