--- a/_layouts/present.html
+++ b/_layouts/present.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    {% include components/toolbox-overlay.html %}
+    <div class="toolbox-overlay"></div>
     {{ content }}
 
     {% comment %} POPUPS {% endcomment %}
