--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,38 +1,97 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.5.3/tailwind.min.css" />
-<link rel="stylesheet" href="{{ site.baseurl }}/sass/tailwind-extend.css">
-<link rel="stylesheet" href="{{ site.baseurl }}/sass/tailwind-custom.css">
+{% comment %} DEFAULT {% endcomment %}
+  {% assign location = "https://tenforce.github.io/design-toolbox-default-css" %}
+  {% comment %}
+    {% if site.url contains "localhost" %}
+      {% assign location = "http://localhost:4010" %}
+    {% endif %}
+  {% endcomment %}
+  {% comment %} jQuery {% endcomment %}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  {% comment %} CDN OR USED PLUGINS NOT MADE BY US {% endcomment %}
+  {% comment %} cdn for animations {% endcomment %}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
+  {% comment %} components {% endcomment %}
+  <script src="{{ location }}/scripts/components/toolbox-overlay.js"></script>
+  {% comment %} plugins {% endcomment %}
+  <script src="{{ location }}/scripts/plugin/expand-collapse.js"></script>
+  <script src="{{ location }}/scripts/plugin/init-expand-collapse.js"></script>
+
+{% comment %} field {% endcomment %}
+  {% assign location = "https://tenforce.github.io/design-toolbox-field" %}
+  {% comment %}
+    {% if site.url contains "localhost" %}
+      {% assign location = "http://localhost:4013" %}
+    {% endif %}
+  {% endcomment %}
+  <link rel="stylesheet" href="{{ location }}/sass/toolbox-field.css">
+  <script type="text/javascript" src="{{location}}/scripts/components/toolbox-field.js"></script>
+
+{% comment %} table {% endcomment %}
+  {% assign location = "https://tenforce.github.io/design-toolbox-table" %}
+  {% comment %}
+    {% if site.url contains "localhost" %}
+      {% assign location = "http://localhost:4014" %}
+    {% endif %}
+  {% endcomment %}
+  <link rel="stylesheet" href="{{ location }}/sass/toolbox-table.css">
+
+{% comment %} button push {% endcomment %}
+  {% assign location = "https://tenforce.github.io/design-toolbox-button-push" %}
+  {% comment %}
+    {% if site.url contains "localhost" %}
+      {% assign location = "http://localhost:4012" %}
+    {% endif %}
+  {% endcomment %}
+  <link rel="stylesheet" href="{{ location }}/sass/toolbox-button.css">
+
+{% comment %} modal {% endcomment %}
+  {% assign location = "https://tenforce.github.io/design-toolbox-modal" %}
+  {% comment %}
+    {% if site.url contains "localhost" %}
+      {% assign location = "http://localhost:4015" %}
+    {% endif %}
+  {% endcomment %}
+  <link rel="stylesheet" href="{{ location }}/sass/toolbox-modal.css">
+  <script type="text/javascript" src="{{location}}/scripts/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/animation.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/filter.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/incl-excl-filter.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/ms-calendar.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/ms-colorselector.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/ms-columnpicker-options.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/popup.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/reset-to-default.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/reset.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/sortable.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/sublist-closer.js"></script>
+  <script type="text/javascript" src="{{location}}/scripts/toolbox-modal.js"></script>
+
+{% comment %} selector {% endcomment %}
+  {% assign location = "https://tenforce.github.io/design-toolbox-selector" %}
+  {% comment %}
+    {% if site.url contains "localhost" %}
+      {% assign location = "http://localhost:4011" %}
+    {% endif %}
+  {% endcomment %}
+  <link rel="stylesheet" href="{{ location }}/sass/toolbox-selector.css">
+  <link rel="stylesheet" href="{{ location }}/sass/toolbox-selector-draggable.css">
+  <script type="text/javascript" src="{{location}}/scripts/components/toolbox-selector.js"></script>
 
 
-{% comment %} CDN OR USED PLUGINS NOT MADE BY US {% endcomment %}
-{% comment %} cdn for animations {% endcomment %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
-<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
 
-{% comment %} Plugins {% endcomment %}
+
+
+
+
+
+
+
+
+
+
+
+{% comment %} Plugins for tracker mockup {% endcomment %}
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/clipboard.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/copy-clipboard.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
-
-{% comment %} Components {% endcomment %}
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toolbox-field.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toolbox-overlay.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toolbox-selector.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/singleselect.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toolbox-tabs.js"></script>
-
-{% comment %} toolbox-modal main{% endcomment %}
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/popup.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/reset.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/toolbox-modal.js"></script>
-
-{% comment %} toolbox-modal plugins{% endcomment %}
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/animation.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/ms-calendar.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/ms-colorselector.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/ms-columnpicker-options.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/filter.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/incl-excl-filter.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/reset-to-default.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/sortable.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/toolbox-modal/sublist-closer.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/tracker-init-expand-collapse.js"></script>
