--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,22 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
-<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i&amp;subset=latin-ext" rel="stylesheet">
+{% comment %} DEFAULT {% endcomment %}
+  {% assign location = "https://tenforce.github.io/design-toolbox-default-css" %}
+  {% comment %}
+    {% if site.url contains "localhost" %}
+      {% assign location = "http://localhost:4010" %}
+    {% endif %}
+  {% endcomment %}
 
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i,700,700i&amp;subset=latin-ext" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/0.6.4/tailwind.min.css" />
+
+  <link rel="stylesheet" href="{{ location }}/sass/default.css">
+
+
+
+{% comment %} mockup sass {% endcomment %}
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/app.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/plugins.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/sass/components.css">
@@ -24,4 +38,3 @@
 
 {% comment %} jQuery {% endcomment %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
