--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-us" class="antialiased">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
-
-  <title>{{ page.title }}</title>
-
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicon-16x16.png">
-  <link rel="manifest" href="{{ site.baseurl }}/site.webmanifest">
-  <link rel="mask-icon" href="{{ site.baseurl }}/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-
-  {% include head.html %}
+  <head>
+    {% include head.html %}
+  </head>
 </head>
 
 <body style="background-color: #FFF;">
@@ -34,5 +21,6 @@
     {% include components/toolbox-push.html href="tutorial" title="Tutorial" %}
   </section>
 
+  {% include foot.html %}
 </body>
 </html>
