--- a/_includes/components/toolbox-tabs-panels.html
+++ b/_includes/components/toolbox-tabs-panels.html
@@ -1,7 +1,7 @@
 {% comment %} splitting up the data into multiple items. separator ;&&; {% endcomment %}
 {% assign tabsData = include.data | split: ";&&;" %}
 
-<div class="toolbox-tabs-panels p-2">
+<div class="toolbox-tabs-panels">
     {% for tab in tabsData %}
         <div class="toolbox-tabs-panels__panel" tabindex="{{forloop.index}}">
           {{tab}}
