--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -88,6 +88,15 @@
   <link rel="stylesheet" href="{{ location }}/sass/toolbox-tabs.css">
   <script type="text/javascript" src="{{location}}/scripts/components/toolbox-tabs.js"></script>
 
+{% comment %} comments {% endcomment %}
+  {% assign location = "https://tenforce.github.io/design-toolbox-comments" %}
+  {% comment %}
+    {% if site.url contains "localhost" %}
+      {% assign location = "http://localhost:4017" %}
+    {% endif %}
+  {% endcomment %}
+  <link rel="stylesheet" href="{{ location }}/sass/toolbox-comments.css">
+  <script type="text/javascript" src="{{location}}/scripts/components/toolbox-comments.js"></script>
 
 
 
